# UDP_remote_command_terminal

./: README.md
UDP_client/: CMakeLists.txt  Main_Protocol.cpp  Main_Protocol.h  Test.cpp  main.cpp
UDP_server/: CMakeLists.txt  Main_Protocol.cpp  Test.cpp  UDP.cpp  UDP.h  cmd_exec.h  main.cpp
